Wed Aug 10 21:37:10 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastInst.h:
        * dds/DCPS/transport/multicast/MulticastInst.cpp:
        * dds/DCPS/transport/multicast/MulticastSendStrategy.cpp:
        * dds/DCPS/transport/multicast/MulticastSession.h:
        * dds/DCPS/transport/multicast/MulticastSession.cpp:
        * dds/DCPS/transport/multicast/MulticastTransport.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Defer returning a DataLink to the framework until the SYN/SYNACK
          control messages are received.

        * performance-tests/DCPS/MulticastListenerTest/run_test.pl:

          Update the write_throttle parameter when num_writers changes.

Wed Aug 10 20:52:54 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Presentation/GeneratorEditor.java:

          Make sure we have a content provider before setting input.  Was
          causing exception.

Wed Aug 10 18:01:03 UTC 2011  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/TransportHeader.inl:
        * dds/DCPS/transport/framework/TransportHeader.cpp:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/multicast/MulticastTransport.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
        * dds/DCPS/transport/tcp/TcpTransport.h:
        * dds/DCPS/transport/tcp/TcpTransport.cpp:
        * dds/DCPS/transport/udp/UdpDataLink.cpp:
        * dds/DCPS/transport/udp/UdpTransport.h:
        * dds/DCPS/transport/udp/UdpTransport.cpp:
        * performance-tests/DCPS/dummyTCP/DummyTcpTransport.h:
        * performance-tests/DCPS/dummyTCP/DummyTcpTransport.cpp:

          Changes to allow "handshaking" of UDP connections to